# PolicySearchPlayGround

BanditPS/: AcrobotControllerWrapper.m  oo.m  runStoSOO.m
drake-distro/: addpath_pods.m
drake-distro/avl/pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
drake-distro/avl/pod-build/eispack/: Makefile  cmake_install.cmake
drake-distro/bullet/: Makefile  bullet_double_precision_patch.diff  bullet_gjk_accuracy_patch.diff  install_prereqs.sh
drake-distro/bullet/pod-build/: CMakeCache.txt  Makefile  bullet.pc  cmake_install.cmake  install_manifest.txt
drake-distro/drake/: addpath_drake.m
drake-distro/drake/pod-build/: CMakeCache.txt  CTestCustom.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt
drake-distro/drake/solvers/: NonlinearProgram.m  NonlinearProgramSnoptmex.cpp  NonlinearProgramSnoptmex.mexa64
drake-distro/drake/systems/: DCSFunction.mexa64
drake-distro/drake/util/: barycentricInterpolation.mexa64  lcmLogger.mexa64  publishLCMLog.mexa64  realtime.mexa64
drake-distro/eigen/pod-build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cdashtesting.cmake  cmake_install.cmake  install_manifest.txt
drake-distro/lcm/lcm-1.0.0/: Makefile  config.status  libtool
drake-distro/snopt/: CMakeLists.txt  Makefile  README  README.CPP  README.MATLAB  README.WhatsNew  install_prereqs.sh  snoptMailingList
drake-distro/snopt/cexamples/: .cvsignore  CMakeLists.txt  README  Submakefile  csntoya.c
drake-distro/snopt/cmex/: CMakeLists.txt  Submakefile  snoptprint.c  snoptprobdef.c
drake-distro/snopt/cppexamples/: CMakeLists.txt  README  Submakefile  sntoya.cc  toyfunction.cc
drake-distro/snopt/cppsrc/: CMakeLists.txt  Submakefile  snoptProblem.cc
drake-distro/snopt/csrc/: CMakeLists.txt  Submakecfile  Submakefile  np02lib.c  npopt.c  sn02lib.c  sn03prnt.c  sn05wrpa.c  sn05wrpb.c  sn05wrpc.c  sn05wrpn.c  sn10mach.c  sn12ampl.c  sn15blas.c  sn17util.c  sn20amat.c  sn25bfac.c  sn27lu.c  sn30spec.c  sn35mps.c  sn37wrap.c  sn40bfil.c  sn50lp.c  sn55qp.c  sn56qncg.c  sn57qopt.c  sn60srch.c  sn65rmod.c  sn70nobj.c  sn80ncon.c  sn85hess.c  sn87sopt.c  sn90lmqn.c  sn95fmqn.c  snopta.c  snoptb.c  snoptc.c  snoptq.c  sq02lib.c  sqopt.c
drake-distro/snopt/doc/: elastic.info  format.info
drake-distro/snopt/examples/: .cvsignore  CMakeLists.txt  SampleMake  Submakefile  calvara.f  calvara.spc  catmixa.f  catmixa.spc  catmixb.f  catmixc.f  check  check.log0  hs118.f  hs118.spc  hsmaina.f  hsmaina.spc  hsmainc.f  hsmainc.spc  lp.spc  maxi.f  maxi.spc  npmain.f  npmain.spc  refinery.mps  run  runLP  runLP_vg  run_vg  slmain.f  slmainMPS.f  sn01main.f  snmaina.f  snmaina.spc  snmainb.f  snmainc.f  snmainc.spc  snmemtesta.f  snmemtestb.f  snmemtestb.spc  sntoya.f  (+26 more)
drake-distro/snopt/examples/CVS/: Entries
drake-distro/snopt/libf2c/: CMakeLists.txt  a.out  arithchk.c  c_cos.c  c_exp.c  c_log.c  c_sin.c  c_sqrt.c  cabs.c  d_acos.c  d_asin.c  d_atan.c  d_atn2.c  d_cos.c  d_cosh.c  d_exp.c  d_int.c  d_lg10.c  d_log.c  d_mod.c  d_nint.c  d_sin.c  d_sinh.c  d_sqrt.c  d_tan.c  d_tanh.c  h_dnnt.c  h_nint.c  i_dnnt.c  i_nint.c  pow_dd.c  pow_zz.c  r_acos.c  r_asin.c  r_atan.c  r_atn2.c  r_cos.c  r_cosh.c  r_exp.c  r_int.c  (+14 more)
drake-distro/snopt/matlab/: snoptcmex.mexa64
drake-distro/snopt/matlab/examples/CVS/: Entries
drake-distro/snopt/matlab/examples/hsmain/CVS/: Entries
drake-distro/snopt/matlab/examples/snmain/CVS/: Entries
drake-distro/snopt/matlab/examples/snpmat/CVS/: Entries  Repository
drake-distro/snopt/pod-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dummy.mexa64  install_manifest.txt
drake-distro/snopt/pod-build/cexamples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
drake-distro/snopt/pod-build/cmex/: CTestTestfile.cmake  Makefile  cmake_install.cmake
drake-distro/snopt/pod-build/cppexamples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
drake-distro/snopt/pod-build/cppsrc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
drake-distro/snopt/pod-build/csrc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
drake-distro/snopt/pod-build/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
drake-distro/snopt/pod-build/include/snopt/: snopt.h  snopt.hh
drake-distro/snopt/pod-build/lib/pkgconfig/: snopt.pc  snopt_c.pc
drake-distro/snopt/pod-build/libf2c/: CTestTestfile.cmake  Makefile  cmake_install.cmake
drake-distro/snopt/pod-build/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
drake-distro/snopt/src/: CMakeLists.txt  ChangeLog  Submakefile  np02lib.f  sn02lib.f  sn37wrap.f  sn50lp.f  sn55qp.f  sn87sopt.f  sntasks.info  snworkspace.info  sq02lib.f
drake-distro/spotless/pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
drake-distro/xfoil/pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
drake-eigen-0.9.6-4026eae-linux/drake/: fin_diff.m
drake-eigen-0.9.6-4026eae-linux/drake/systems/: DCSFunction.mexa64
drake-eigen-0.9.6-4026eae-linux/drake/util/: barycentricInterpolation.mexa64  realtime.mexa64
drake-eigen-0.9.6-4026eae-mac/drake/systems/: DCSFunction.mexmaci64
drake-eigen-0.9.6-4026eae-mac/drake/util/: barycentricInterpolation.mexmaci64  realtime.mexmaci64
drake-precompiled-0.9.7-3ade858-linux/drake/solvers/: NonlinearProgramSnoptmex.mexa64
drake-precompiled-0.9.7-3ade858-linux/drake/systems/: DCSFunction.mexa64
drake-precompiled-0.9.7-3ade858-linux/drake/util/: barycentricInterpolation.mexa64  realtime.mexa64
iLQG/: back_pass.m  diff_xu.m  fin_diff.m  iLQG.m  iLQG.m~  iLQG_BK.m  iLQG_BK.m~  mms.mexa64  mms.mexmaci64
iLQG/back_pass_mex/: back_pass.c  back_pass.mexw64  back_pass2.c  build.m  timing_test.m
iLQG/cart-pole/: cp_forward_pass.m  cp_main.m
iLQG/first-exit/: FE_combine.m  FE_iLQG.m  boundary.m
iLQG_UWash/: fin_diff.m  iLQG.m  mms.c  pour.m
iLQG_UWash/cart-pole/: build_f_pass.m  cp_cost.m  cp_dyn.m
iLQG_UWash/first-exit/: cst2D.m  dyn2D.m  main2D.m
(+7129 files in other folders)
