

macro(add_example)
	add_executable(${ARGV} ${ARGV}.f)
	target_link_libraries(${ARGV} snopt snprint snblas)
	add_test(NAME ${ARGV} COMMAND ${ARGV})
endmacro()

add_example(sntoya)
add_example(sntoyb)
add_example(sntoyc)
add_example(snchka)
add_example(snmaina)
add_example(snmainb)     
add_example(snmainc)
add_example(slmain)
add_example(npmain)
add_example(hsmaina)       
add_example(hsmainc)      
add_example(sqmain)       
add_example(sqmain2)
add_example(snmemtesta)    
add_example(snmemtestb)      
add_example(catmixa)      
add_example(catmixb)       
add_example(catmixc)
add_example(testera)  
add_example(tester)
add_example(t1dieta)
add_example(t1dietb)
add_example(t2bananaa) 
add_example(t2bananab)          
add_example(t3qp)
add_example(t4mannea)      
add_example(t4manneb)     
add_example(t4mannec)    
add_example(t5weapon)        
add_example(t6wood)
add_example(t7etamacro)       
add_example(calvara)      
add_example(springa)      
add_example(springb)      
add_example(springib)
add_example(maxi)         
add_example(hs118)        
#add_example(sqopt)    
add_example(slmainMPS)     
add_example(sqmainMPS)

